--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -63,74 +63,23 @@
   <div id="dashboardSection" class="hidden app-section">
     <div class="text-center">
       <h1 class="text-3xl md:text-4xl font-bold text-gray-800">Dashboard</h1>
-      <p class="mt-2 text-gray-500">
-        Welcome, <span id="coachNameDisplay" class="font-bold text-blue-600"></span>!
-      </p>
+      <p class="mt-2 text-gray-500">Welcome, <span id="coachNameDisplay" class="font-bold text-blue-600"></span>!</p>
     </div>
-      <!-- GRID PRINCIPALE -->
-    <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-6 mt-8">
-      <!-- 1ª riga -->
-      <button id="viewCoachingDebriefBtn" class="cube-button bg-indigo-600 text-white">
-        <span class="text-4xl">💬</span>
-        <p class="mt-2 text-lg font-semibold">Coaching Debrief</p>
-      </button>
-      <button id="logCallBtn" class="cube-button bg-green-600 text-white">
-        <span class="text-4xl">📝</span>
-        <p class="mt-2 text-lg font-semibold">Log a new call</p>
-      </button>
-      <button id="viewCallLogBtn" class="cube-button bg-purple-600 text-white">
-        <span class="text-4xl">📖</span>
-        <p class="mt-2 text-lg font-semibold">Call log</p>
-      </button>
-      <button id="viewReportCardsBtn" class="cube-button bg-teal-600 text-white">
-        <span class="text-4xl">📈</span>
-        <p class="mt-2 text-lg font-semibold">Report Cards</p>
-      </button>
-        <!-- 2ª riga -->
-      <button id="viewStudentsBtn" class="cube-button bg-orange-600 text-white">
-        <span class="text-4xl">🧑‍🎓</span>
-        <p class="mt-2 text-lg font-semibold">Students</p>
-      </button>
-      <button id="viewFlashcardsBtn" class="cube-button bg-pink-600 text-white">
-        <span class="text-4xl">🃏</span>
-        <p class="mt-2 text-lg font-semibold">Flashcards</p>
-      </button>
-      <button id="viewFolderBtn" class="cube-button bg-gray-600 text-white">
-        <span class="text-4xl">📂</span>
-        <p class="mt-2 text-lg font-semibold">My payment folder</p>
-      </button>
-        <div class="cube-button bg-gray-300 text-gray-600 cursor-default">
-        <span class="text-4xl">🧩</span>
-        <p class="mt-2 text-lg font-semibold">New Section</p>
-      </div>
-        <!-- 3ª riga (due sezioni larghe) -->
-      <div id="monthlyEarningsDisplay" class="cube-button bg-blue-600 text-white lg:col-span-2 cursor-default">
+    <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6 mt-8">
+      <div id="monthlyEarningsDisplay" class="cube-button bg-blue-600 text-white cursor-default">
         <p class="text-lg font-medium opacity-80">Monthly Earnings</p>
-        <p class="mt-2 text-5xl font-bold"><span id="earningsAmount">--</span>€</p>
+        <p class="mt-2 text-4xl sm:text-5xl font-bold"><span id="earningsAmount">--</span>€</p>
       </div>
-      <div class="cube-button bg-yellow-400 text-gray-800 lg:col-span-2 cursor-default">
-        <span class="text-4xl">📢</span>
-        <p class="mt-2 text-lg font-semibold">Bulletin Board</p>
-      </div>
-        <!-- 4ª riga (calendario largo doppio e alto doppio) -->
-      <div id="calendarPlaceholder" class="cube-button bg-slate-200 text-gray-700 lg:col-span-4 cursor-default">
-        <span class="text-5xl">📅</span>
-        <p class="mt-4 text-lg font-semibold">Calendar (Coming soon)</p>
-      </div>
-      <!-- LOGOUT -->
-    <button
-      id="logoutBtn"
-      class="w-full bg-red-600 text-white font-semibold py-3 px-6 rounded-xl shadow-lg hover:bg-red-700 focus:outline-none focus:ring-2 focus:ring-red-500 focus:ring-opacity-50 flex items-center justify-center gap-2 mt-8"
-    >
-      <svg xmlns="http://www.w3.org/2000/svg" class="w-5 h-5 text-white" fill="none" viewBox="0 0 24 24"
-        stroke="currentColor">
-        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-          d="M17 16l4-4m0 0l-4-4m4 4H7m6 4v1a2 2 0 01-2 2H5a2 2 0 01-2-2V7a2 2 0 012-2h6a2 2 0 012 2v1" />
-      </svg>
-      <span>Log out</span>
-    </button>
+      <button id="logCallBtn" class="cube-button bg-green-600 text-white"><span class="text-4xl">📝</span><p class="mt-2 text-lg font-semibold">Log a new call</p></button>
+      <button id="viewCallLogBtn" class="cube-button bg-purple-600 text-white"><span class="text-4xl">📖</span><p class="mt-2 text-lg font-semibold">Call log</p></button>
+      <button id="viewStudentsBtn" class="cube-button bg-orange-600 text-white"><span class="text-4xl">🧑‍🎓</span><p class="mt-2 text-lg font-semibold">Students</p></button>
+      <button id="viewCoachingDebriefBtn" class="cube-button bg-indigo-600 text-white">  <span class="text-4xl">📝</span>  <p class="mt-2 text-lg font-semibold">Coaching Debrief</p></button>
+      <button id="viewReportCardsBtn" class="cube-button bg-teal-600 text-white"><span class="text-4xl">📈</span><p class="mt-2 text-lg font-semibold">Report Cards</p></button>
+      <button id="viewFlashcardsBtn" class="cube-button bg-pink-600 text-white"><span class="text-4xl">🃏</span><p class="mt-2 text-lg font-semibold">Flashcards</p></button>
+      <button id="viewFolderBtn" class="cube-button bg-gray-600 text-white"><span class="text-4xl">📂</span><p class="mt-2 text-lg font-semibold">My payment folder</p></button>
+      <button id="logoutBtn" class="cube-button bg-red-600 text-white sm:col-span-2 lg:col-span-1"><span class="text-4xl">🚪</span><p class="mt-2 text-lg font-semibold">Log out</p></button>
+    </div>
   </div>
-
 
   <!-- CALL FORM -->
   <div id="callSection" class="hidden app-section">
@@ -138,14 +87,17 @@
       <h1 class="text-3xl md:text-4xl font-bold text-gray-800">Log a new call</h1>
       <p class="mt-2 text-gray-500">Logged in as <span id="callSectionCoachNameDisplay" class="font-bold text-blue-600"></span>.</p>
     </div>
+
     <div class="flex gap-6 items-center mt-4">
       <label class="flex items-center gap-2"><input type="radio" name="callType" value="IND" checked> IND</label>
       <label class="flex items-center gap-2"><input type="radio" name="callType" value="GROUP"> GROUP</label>
     </div>
+
     <form id="callForm" class="grid grid-cols-1 md:grid-cols-2 gap-6 mt-6">
       <input type="hidden" id="units">
       <input type="hidden" id="contractId">
       <input type="hidden" id="productId">
+
       <!-- Student (IND only) -->
       <div id="studentIdContainer">
         <label for="studentId" class="form-label block mb-2">Student ID</label>
@@ -153,6 +105,7 @@
           <option value="" disabled selected>Loading Student IDs...</option>
         </select>
       </div>
+
           <!-- Product -->
     <div class="md:col-span-1">
       <label for="productIdSelect" class="form-label block mb-2">Product</label>
@@ -161,11 +114,13 @@
       </select>
       <div id="remainingCalls" class="mt-2 p-2 rounded-lg text-sm bg-gray-200 text-gray-700 hidden"></div>
     </div>
-        <!-- Group students -->
+    
+    <!-- Group students -->
     <div id="groupStudentsContainer" class="hidden md:col-span-1">
       <label class="form-label block mb-2">Select Students</label>
       <div id="groupStudentsDynamic" class="space-y-2"></div>
     </div>
+
       <!-- Date -->
       <div>
         <label for="callDate" class="form-label block mb-2">Date</label>
@@ -192,6 +147,7 @@
           <option value="120">120</option>
         </select>
       </div>
+
             <!-- Attendance -->
       <div>
         <label for="attendance" class="form-label block mb-2">Attendance</label>
@@ -200,11 +156,14 @@
           <option value="NO">NO</option>
         </select>
       </div>
+      
             <!-- Notes -->
       <div class="md:col-span-2">
         <label for="notes" class="form-label block mb-2">Notes</label>
         <textarea id="notes" class="form-input" rows="3" placeholder="Write any notes here..."></textarea>
       </div>
+
+
       <div class="md:col-span-2 mt-4">
         <button type="submit" id="submitBtn" class="w-full bg-blue-600 text-white py-3 px-6 rounded-xl shadow-lg hover:bg-blue-700 disabled:bg-blue-400 disabled:cursor-not-allowed">Log Call</button>
         <button type="button" id="backToDashboardBtn" class="w-full mt-2 bg-gray-400 text-white py-3 px-6 rounded-xl hover:bg-gray-500">Back to Dashboard</button>
@@ -213,7 +172,7 @@
     <div id="callMessageBox" class="mt-8 p-4 rounded-xl text-center hidden"></div>
   </div>
 
-    <!-- STUDENTS SECTION -->
+<!-- Students Section -->
 <div id="studentsSection" class="hidden app-section">
   <div class="flex items-center justify-between mb-6 flex-col sm:flex-row">
     <h2 class="text-2xl md:text-3xl font-bold text-gray-800 mb-4 sm:mb-0">My Students</h2>
@@ -222,6 +181,7 @@
       Back to Dashboard
     </button>
   </div>
+
   <div class="space-y-4">
     <div>
       <label for="studentSelect" class="form-label block mb-2">Select a Student</label>
@@ -362,7 +322,6 @@
     <span id="debriefMsg" class="ml-2 text-sm text-gray-500"></span>
   </div>
 </div>
-
 
   
   <!-- CALL HISTORY -->
