--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -12,6 +12,7 @@
 <div id="globalLoader">
   <div class="loader-circle"></div>
 </div>
+  <main id="appRoot" class="w-full flex justify-center">
 <div class="container bg-white p-8 md:p-12 rounded-2xl shadow-xl space-y-8 border border-gray-200">
 
 <!-- GOOGLE AUTH -->
@@ -32,6 +33,7 @@
        data-logo_alignment="left">
   </div>
 </div>
+</main>
 
 
 <script src="https://accounts.google.com/gsi/client" async defer></script>
