--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -8,6 +8,20 @@
   <link rel="stylesheet" href="styles/dashboard.css">
 </head>
 <body class="bg-gray-100 min-h-screen flex items-center justify-center p-4">
+  
+  <!-- HEADER -->
+<header id="mainHeader" class="w-full bg-white shadow-md fixed top-0 left-0 z-50">
+  <div class="max-w-7xl mx-auto px-6 py-3 flex items-center justify-between">
+    <h1 id="sectionTitle" class="text-xl font-semibold text-gray-800">Dashboard</h1>
+    <nav id="breadcrumb" class="text-sm text-gray-500">
+      Home / <span class="text-gray-800 font-medium">Dashboard</span>
+    </nav>
+  </div>
+</header>
+
+<!-- spacer per evitare che il contenuto venga coperto -->
+<div class="h-16"></div>
+
   <!-- Global loader overlay -->
 <div id="globalLoader">
   <div class="loader-circle"></div>
