--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -86,11 +86,13 @@
 
   <!-- DASHBOARD -->
   <div id="dashboardSection" class="hidden app-section">
+    <div class="bg-white p-8 rounded-2xl shadow-xl border border-gray-200">
     <div class="text-center mb-6">
       <h1 class="text-3xl md:text-4xl font-bold text-gray-800">Dashboard</h1>
       <p class="mt-2 text-gray-500">
         Welcome, <span id="coachNameDisplay" class="font-bold text-blue-600"></span>!
       </p>
+      </div>
     </div>
 
     <!-- GRID PRINCIPALE -->
