navmenu fix.html

--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -21,9 +21,11 @@
     <!-- NAVIGATION -->
     <nav class="flex flex-wrap gap-4 text-sm font-medium text-gray-700">
       <button onclick="switchSection(dashboardSection)" class="hover:text-blue-600">Dashboard</button>
+      <button onclick="switchSection(coachingDebriefSection)" class="hover:text-blue-600">Debrief</button>
+      <button onclick="switchSection(callSection)" class="hover:text-blue-600">Log Call</button>
+      <button onclick="switchSection(callHistorySection)" class="hover:text-blue-600">Call History</button>
       <button onclick="switchSection(studentsSection)" class="hover:text-blue-600">Students</button>
-      <button onclick="switchSection(coachingDebriefSection)" class="hover:text-blue-600">Debriefs</button>
-      <button onclick="switchSection(reportCardsSection)" class="hover:text-blue-600">Reports</button>
+      <button onclick="switchSection(reportCardsSection)" class="hover:text-blue-600">Report Cards</button>
       <button onclick="switchSection(flashcardsSection)" class="hover:text-blue-600">Flashcards</button>
     </nav>
   </div>
