--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -262,13 +262,16 @@
 
 <!-- Students Section -->
 <div id="studentsSection" class="hidden app-section">
-  <div class="flex items-center justify-between mb-6 flex-col sm:flex-row">
-    <h2 class="text-2xl md:text-3xl font-bold text-gray-800 mb-4 sm:mb-0">My Students</h2>
-    <button id="backToDashboardFromStudentsBtn" 
-      class="bg-gray-400 text-white font-semibold py-2 px-4 rounded-xl shadow-lg transition duration-300 ease-in-out hover:bg-gray-500 focus:outline-none">
-      Back to Dashboard
-    </button>
+<div class="flex justify-between items-center mb-8 border-b border-gray-200 pb-3">
+  <div class="flex items-center gap-3">
+    <span class="text-3xl">🧑‍🎓</span>
+    <h2 class="text-2xl font-semibold text-gray-800">My Students</h2>
   </div>
+  <button id="backToDashboardFromStudentsBtn"
+    class="bg-gray-400 text-white font-semibold py-2 px-4 rounded-xl shadow-lg hover:bg-gray-500 transition">
+    Back to Dashboard
+  </button>
+</div>
 
   <div class="space-y-4">
     <div>
