--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -427,8 +427,6 @@
       Back to Dashboard
     </button>
   </div>
-  <!-- SUBTEXT -->
-  <p class="text-gray-500 mb-6">Your logged calls</p>
   <!-- FILTER -->
   <div class="flex items-center justify-between mb-6 gap-4">
     <div class="flex items-center">
@@ -452,70 +450,41 @@
   </div>
 </div>
 
-<!-- REPORT CARDS SECTION -->
+<!-- REPORT CARDS -->
 <div id="reportCardsSection" class="hidden app-section">
-  <div class="flex items-center justify-between mb-6 flex-col sm:flex-row">
-    <h2 class="text-2xl md:text-3xl font-bold text-gray-800 mb-4 sm:mb-0">Report Cards</h2>
-    <button id="backToDashboardFromReportsBtn" class="bg-gray-400 text-white font-semibold py-2 px-4 rounded-xl shadow-lg hover:bg-gray-500">
+  <!-- HEADER -->
+  <div class="flex justify-between items-center mb-8 border-b border-gray-200 pb-3">
+    <div class="flex items-center gap-3">
+      <span class="text-3xl">📈</span>
+      <h2 class="text-2xl font-semibold text-gray-800">Report Cards</h2>
+    </div>
+    <button id="backToDashboardFromReportsBtn"
+      class="bg-gray-400 text-white font-semibold py-2 px-4 rounded-xl shadow-lg hover:bg-gray-500 transition">
       Back to Dashboard
     </button>
   </div>
-
-  <!-- Pending (Tasks + Drafts unificati) -->
-  <div id="reportCardsContainer" class="space-y-4 text-gray-700">
+  <!-- PENDING (Tasks + Drafts unificati) -->
+  <div id="reportCardsContainer" class="space-y-4 text-gray-700 mb-10">
     <p class="text-gray-500 text-center">Loading report card tasks...</p>
   </div>
-
-  <!-- No-shows (solo Head Coach) -->
-  <div id="reportCardNoShowsContainer" class="space-y-4 text-gray-700 mt-6 hidden"></div>
-
-  <!-- History -->
-  <div id="reportCardHistoryContainer" class="space-y-4 text-gray-700 mt-10">
-    <div class="flex items-center justify-between">
+  <!-- HISTORY -->
+  <div id="reportCardHistoryContainer" class="space-y-4 text-gray-700">
+    <div class="flex items-center justify-between mb-2">
       <h3 class="text-xl font-semibold text-gray-800">Report Cards History</h3>
-      <button id="sendAllReportCardsBtn" 
-              class="hidden bg-green-600 hover:bg-green-700 text-white px-4 py-2 rounded-lg shadow">
+      <button id="sendAllReportCardsBtn"
+        class="hidden bg-green-600 hover:bg-green-700 text-white px-4 py-2 rounded-lg shadow">
         📤 Send All
       </button>
     </div>
-
-        <!-- Confirm Send-All Modal -->
-    <div id="sendAllConfirmModal" class="fixed inset-0 z-[10000] hidden">
-      <!-- backdrop -->
-      <div class="absolute inset-0 bg-black/50"></div>
-      <!-- dialog -->
-      <div class="absolute inset-0 flex items-center justify-center p-4">
-        <div class="bg-white w-full max-w-md rounded-2xl shadow-xl border border-gray-200">
-          <div class="p-6">
-            <h3 class="text-xl font-semibold text-gray-900">Send all report cards?</h3>
-            <p class="mt-2 text-gray-600">
-              This will send one consolidated email per client (first recipient in <b>To:</b>, others in <b>CC:</b>).
-            </p>
-            <div class="mt-6 flex items-center justify-end gap-3">
-              <button id="cancelSendAllBtn" class="px-4 py-2 rounded-lg bg-gray-200 text-gray-800 hover:bg-gray-300">Cancel</button>
-              <button id="confirmSendAllBtn" class="px-4 py-2 rounded-lg bg-green-600 text-white hover:bg-green-700">Confirm & Send</button>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-    
-        <!-- Toast notification -->
-    <div id="toast" 
-         class="hidden fixed top-4 right-4 bg-green-600 text-white px-4 py-2 rounded-lg shadow-lg z-[99999]">
-    </div>
-
-
     <!-- filtro mese -->
-    <div class="flex items-center gap-2 mt-2">
+    <div class="flex items-center gap-2">
       <label for="historyFilterMonth" class="font-medium">Filter by month:</label>
       <input type="month" id="historyFilterMonth" class="form-input w-auto inline-block">
     </div>
-
-    <!-- tabella storico -->
-    <div class="overflow-x-auto mt-4">
-      <table class="min-w-full border border-gray-200 rounded-xl">
-        <thead class="bg-gray-100">
+    <!-- TABELLA STORICO -->
+    <div class="overflow-x-auto mt-4 max-h-[400px] overflow-y-auto border border-gray-200 rounded-xl shadow-sm">
+      <table class="min-w-full border-collapse">
+        <thead class="bg-gray-100 sticky top-0 z-10">
           <tr>
             <th class="px-4 py-2 border">Date</th>
             <th class="px-4 py-2 border">Student</th>
@@ -524,79 +493,63 @@
             <th class="px-4 py-2 border">Sent</th>
           </tr>
         </thead>
-        <tbody id="reportCardHistoryTableBody"></tbody>
+        <tbody id="reportCardHistoryTableBody" class="divide-y divide-gray-200"></tbody>
       </table>
     </div>
+    <p class="text-xs text-gray-400 mt-1">Showing latest entries (max 8 rows)</p>
   </div>
-</div>
-
-
-<!-- REPORT CARD FORM -->
-<div id="reportCardFormSection" class="hidden app-section">
-  <div class="flex items-center justify-between mb-6 flex-col sm:flex-row">
-    <h2 class="text-2xl md:text-3xl font-bold text-gray-800 mb-4 sm:mb-0">Write Report Card</h2>
-    <button id="backToReportCardsBtn" class="bg-gray-400 text-white font-semibold py-2 px-4 rounded-xl shadow-lg hover:bg-gray-500">
-      Back
-    </button>
-  </div>
-
-  <form id="reportCardForm" class="space-y-4">
-    <input type="hidden" id="rcStudentId" name="studentId">
-    <input type="hidden" id="rcContractId" name="contractId">
-    <input type="hidden" id="rcCoachId" name="coachId">
-    <input type="hidden" id="rcStudentName" name="studentName">
-
-
-    <div>
-      <label class="form-label block mb-2">Attendance</label>
-      <select id="rcAttendance" class="form-input" required>
-        <option value="">Select...</option>
-        <option value="Excellent">Excellent</option>
-        <option value="Good">Good</option>
-        <option value="Average">Average</option>
-        <option value="Poor">Poor</option>
-      </select>
+<!-- NO-SHOW STUDENTS COLLAPSED SECTIONS -->
+<div id="noShowSection" class="mt-10 border-t border-gray-200 pt-6 space-y-6">
+  <!-- CURRENT MONTH -->
+  <details class="bg-gray-50 rounded-xl shadow-inner p-4">
+    <summary class="cursor-pointer flex items-center justify-between text-gray-800 font-semibold text-lg">
+      <span>🚫 No-show Students (Current Month)</span>
+      <span class="text-gray-500 text-sm">click to expand</span>
+    </summary>
+    <div id="reportCardNoShowsContainer" class="space-y-4 text-gray-700 mt-4">
+      <p class="text-gray-500 text-center">Loading current month no-shows...</p>
     </div>
-
-    <div>
-      <label class="form-label block mb-2">Report</label>
-      <textarea id="rcReport" class="form-input" rows="6" placeholder="Write your notes here..." required></textarea>
-      <div class="flex flex-wrap gap-2 mt-2">
-  <button type="button" id="aiSuggestBtn" class="bg-indigo-600 text-white px-3 py-1 rounded-lg hover:bg-indigo-700">
-    ✨ Suggest text
-  </button>
-  <button type="button" id="aiRefineBtn" class="bg-gray-600 text-white px-3 py-1 rounded-lg hover:bg-gray-700">
-    📝 Refine current text
-  </button>
-</div>
-<p id="aiHelperMsg" class="mt-2 text-sm text-gray-500"></p>
-
+  </details>
+  <!-- PREVIOUS MONTHS -->
+  <details class="bg-gray-50 rounded-xl shadow-inner p-4">
+    <summary class="cursor-pointer flex items-center justify-between text-gray-800 font-semibold text-lg">
+      <span>📅 No-show Students (Previous Months)</span>
+      <span class="text-gray-500 text-sm">click to expand</span>
+    </summary>
+    <div id="reportCardNoShowsPreviousContainer" class="space-y-4 text-gray-700 mt-4">
+      <p class="text-gray-500 text-center">Loading previous months no-shows...</p>
     </div>
-
-    <button type="submit" class="w-full bg-blue-600 text-white py-3 px-6 rounded-xl shadow-lg hover:bg-blue-700">
-      Save Draft
-    </button>
-
-    <!-- ✅ messaggio ora subito sotto al bottone -->
-    <div id="reportCardMessageBox" class="mt-4 p-4 rounded-xl text-center hidden"></div>
-  </form>
-
-  <!-- tabella chiamate -->
-  <div id="reportCardCallsTable" class="mt-6 hidden">
-    <h3 class="text-lg font-semibold text-gray-800 mb-2">Calls this month</h3>
-    <table class="min-w-full border border-gray-200 rounded-xl">
-      <thead class="bg-gray-100">
-        <tr>
-          <th class="px-4 py-2 border">Date</th>
-          <th class="px-4 py-2 border">Attendance</th>
-        </tr>
-      </thead>
-      <tbody id="reportCardCallsTableBody"></tbody>
-    </table>
+  </details>
+</div>
+  <!-- CONFIRM SEND-ALL MODAL -->
+  <div id="sendAllConfirmModal" class="fixed inset-0 z-[10000] hidden">
+    <!-- backdrop -->
+    <div class="absolute inset-0 bg-black/50"></div>
+    <!-- dialog -->
+    <div class="absolute inset-0 flex items-center justify-center p-4">
+      <div class="bg-white w-full max-w-md rounded-2xl shadow-xl border border-gray-200">
+        <div class="p-6">
+          <h3 class="text-xl font-semibold text-gray-900">Send all report cards?</h3>
+          <p class="mt-2 text-gray-600">
+            This will send one consolidated email per client (first recipient in <b>To:</b>, others in <b>CC:</b>).
+          </p>
+          <div class="mt-6 flex items-center justify-end gap-3">
+            <button id="cancelSendAllBtn"
+              class="px-4 py-2 rounded-lg bg-gray-200 text-gray-800 hover:bg-gray-300">Cancel</button>
+            <button id="confirmSendAllBtn"
+              class="px-4 py-2 rounded-lg bg-green-600 text-white hover:bg-green-700">Confirm & Send</button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!-- TOAST NOTIFICATION -->
+  <div id="toast"
+    class="hidden fixed top-4 right-4 bg-green-600 text-white px-4 py-2 rounded-lg shadow-lg z-[99999]">
   </div>
 </div>
 
-<!-- FLASHCARDS SECTION -->
+<!-- FLASHCARDS  -->
 <div id="flashcardsSection" class="hidden app-section">
   <div class="flex items-center justify-between mb-6 flex-col sm:flex-row">
     <h2 class="text-2xl md:text-3xl font-bold text-gray-800 mb-4 sm:mb-0">Flashcards</h2>
