--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -454,9 +454,13 @@
 
 <!-- REPORT CARDS SECTION -->
 <div id="reportCardsSection" class="hidden app-section">
-  <div class="flex items-center justify-between mb-6 flex-col sm:flex-row">
-    <h2 class="text-2xl md:text-3xl font-bold text-gray-800 mb-4 sm:mb-0">Report Cards</h2>
-    <button id="backToDashboardFromReportsBtn" class="bg-gray-400 text-white font-semibold py-2 px-4 rounded-xl shadow-lg hover:bg-gray-500">
+  <div class="flex justify-between items-center mb-8 border-b border-gray-200 pb-3">
+    <div class="flex items-center gap-3">
+      <span class="text-3xl">📈</span>
+      <h2 class="text-2xl font-semibold text-gray-800">Report Cards</h2>
+    </div>
+    <button id="backToDashboardFromReportsBtn"
+      class="bg-gray-400 text-white font-semibold py-2 px-4 rounded-xl shadow-lg hover:bg-gray-500 transition">
       Back to Dashboard
     </button>
   </div>
