--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -537,9 +537,13 @@
 
 <!-- REPORT CARD FORM -->
 <div id="reportCardFormSection" class="hidden app-section">
-  <div class="flex items-center justify-between mb-6 flex-col sm:flex-row">
-    <h2 class="text-2xl md:text-3xl font-bold text-gray-800 mb-4 sm:mb-0">Write Report Card</h2>
-    <button id="backToReportCardsBtn" class="bg-gray-400 text-white font-semibold py-2 px-4 rounded-xl shadow-lg hover:bg-gray-500">
+  <div class="flex justify-between items-center mb-8 border-b border-gray-200 pb-3">
+    <div class="flex items-center gap-3">
+      <span class="text-3xl">📝</span>
+      <h2 class="text-2xl font-semibold text-gray-800">Write Report Card</h2>
+    </div>
+    <button id="backToReportCardsBtn"
+      class="bg-gray-400 text-white font-semibold py-2 px-4 rounded-xl shadow-lg hover:bg-gray-500 transition">
       Back
     </button>
   </div>
@@ -602,10 +606,13 @@
 
 <!-- FLASHCARDS SECTION -->
 <div id="flashcardsSection" class="hidden app-section">
-  <div class="flex items-center justify-between mb-6 flex-col sm:flex-row">
-    <h2 class="text-2xl md:text-3xl font-bold text-gray-800 mb-4 sm:mb-0">Flashcards</h2>
+  <div class="flex justify-between items-center mb-8 border-b border-gray-200 pb-3">
+    <div class="flex items-center gap-3">
+      <span class="text-3xl">🃏</span>
+      <h2 class="text-2xl font-semibold text-gray-800">Flashcards</h2>
+    </div>
     <button id="backToDashboardFromFlashcardsBtn"
-      class="bg-gray-400 text-white font-semibold py-2 px-4 rounded-xl shadow-lg hover:bg-gray-500">
+      class="bg-gray-400 text-white font-semibold py-2 px-4 rounded-xl shadow-lg hover:bg-gray-500 transition">
       Back to Dashboard
     </button>
   </div>
